Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-45570

QmediaPlayer won't setPlaybackRate() after pause() & play() if paused when slow

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 5.4.1
    • Multimedia
    • None
    • Mac OSX 10.10.3
    • 95fa47f7472ac9bcb99df98bcd02c9a1907b6f3a

      Application is playing a local file, am controlling the playback rate. I pause() the QmediaPlayer, and then resume with play(). If pause() is called when the playbackRate is set < 1, then subsequent calls to setPlaybackRate() after the video is playing have No Effect.

      I can work-around by calling:
      mediaPlayer->setPlaybackRate(1.0);
      mediaPlayer->pause();

      This allows me to set the playbackRate to some != 1 value after a call to play()

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ylopes Yoann Lopes
            pshubert Paul Shubert
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes