src/plugins/avfoundation/mediaplayer/avfmediaplayercontrol.mm
@@ -63,6 +63,8 @@ void AVFMediaPlayerControl::setSession(AVFMediaPlayerSession *session)
     connect(m_session, SIGNAL(audioAvailableChanged(bool)), this, SIGNAL(audioAvailableChanged(bool)));
     connect(m_session, SIGNAL(videoAvailableChanged(bool)), this, SIGNAL(videoAvailableChanged(bool)));
     connect(m_session, SIGNAL(error(int,QString)), this, SIGNAL(error(int,QString)));
+    connect(m_session, &AVFMediaPlayerSession::playbackRateChanged,
+            this, &AVFMediaPlayerControl::playbackRateChanged);
 }
 
 QMediaPlayer::State AVFMediaPlayerControl::state() const
